[package]
name = "distributions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
statrs = "0.17.1"
v_utils = { version = "1.7.8", features = ["io"] }
